#!/usr/bin/env python3
"""
Prowzi ADK Analysis Agent

This agent integrates Google ADK with Prowzi's memory-enhanced orchestrator
for ML-heavy market analysis and trading signal generation.
"""

import asyncio
import json
import os
from typing import Dict, Any, List
import nats
from google.adk import Agent
from google.adk.tools import Tool, ToolParams

# Prowzi-specific tool wrappers
class GetOrderBookTool(Tool):
    """Fetch Solana order book data via Rust service"""
    name = "get_order_book"
    description = "Fetch order book data for a Solana token pair"
    
    async def __call__(self, token_pair: str, depth: int = 10) -> Dict[str, Any]:
        # In production, this would call the Rust gRPC service
        # For now, simulate order book data
        return {
            "pair": token_pair,
            "bids": [{"price": 100.0 - i, "size": 1000 + i*100} for i in range(depth)],
            "asks": [{"price": 100.0 + i, "size": 1000 + i*100} for i in range(depth)],
            "timestamp": "2024-01-01T00:00:00Z"
        }

class SimulateFillTool(Tool):
    """Simulate order fill using Prowzi's risk engine"""
    name = "simulate_fill"
    description = "Simulate order execution and calculate expected slippage"
    
    async def __call__(self, token_pair: str, side: str, size: float, price: float) -> Dict[str, Any]:
        # Simulate fill calculation
        slippage = 0.001 * size / 1000  # Simple slippage model
        expected_fill_price = price * (1 + slippage if side == "buy" else 1 - slippage)
        
        return {
            "pair": token_pair,
            "side": side,
            "size": size,
            "requested_price": price,
            "expected_fill_price": expected_fill_price,
            "slippage": slippage,
            "confidence": 0.85
        }

class CalculateRiskTool(Tool):
    """Calculate position risk using Prowzi's risk engine"""
    name = "calculate_risk"
    description = "Calculate Value at Risk and position sizing recommendations"
    
    async def __call__(self, position_size: float, token_pair: str, timeframe: str = "1h") -> Dict[str, Any]:
        # Simple VaR calculation (in production would call Rust risk engine)
        volatility = 0.02  # 2% hourly volatility assumption
        var_95 = position_size * volatility * 1.65  # 95% VaR
        
        return {
            "position_size": position_size,
            "pair": token_pair,
            "timeframe": timeframe,
            "var_95": var_95,
            "recommended_size": min(position_size, var_95 * 0.5),
            "risk_level": "medium" if var_95 < position_size * 0.1 else "high"
        }

class ProwziAnalysisAgent:
    """Main ADK agent integrated with Prowzi memory system"""
    
    def __init__(self):
        self.agent_id = os.getenv("AGENT_ID", "analysis_agent")
        self.nats_url = os.getenv("NATS_URL", "nats://localhost:4222")
        self.nc = None
        
        # Initialize ADK agent
        self.adk_agent = Agent(
            name="prowzi_analysis",
            model=os.getenv("ADK_MODEL", "gemini-2b-flash"),
            instruction="""
            You are a sophisticated trading analysis agent for the Prowzi platform.
            
            Your role:
            1. Analyze order book data to identify arbitrage opportunities
            2. Calculate risk metrics and position sizing recommendations
            3. Generate trading signals based on market microstructure
            4. Integrate insights with Prowzi's memory system for continuous learning
            
            Always prioritize risk management and provide confidence scores for your recommendations.
            """,
            tools=[GetOrderBookTool(), SimulateFillTool(), CalculateRiskTool()],
        )
    
    async def start(self):
        """Start the agent and connect to Prowzi infrastructure"""
        print(f"Starting Prowzi Analysis Agent: {self.agent_id}")
        
        # Connect to NATS
        self.nc = await nats.connect(self.nats_url)
        print(f"Connected to NATS at {self.nats_url}")
        
        # Subscribe to task messages
        await self.nc.subscribe(f"agent.task.{self.agent_id}", cb=self.handle_task)
        
        # Subscribe to control messages
        await self.nc.subscribe(f"agent.control.{self.agent_id}", cb=self.handle_control)
        
        # Start heartbeat
        asyncio.create_task(self.send_heartbeat())
        
        print(f"Agent {self.agent_id} is ready and listening for tasks")
        
        # Keep the agent running
        try:
            while True:
                await asyncio.sleep(1)
        except KeyboardInterrupt:
            print("Shutting down agent...")
            await self.shutdown()
    
    async def handle_task(self, msg):
        """Handle incoming tasks from Prowzi orchestrator"""
        try:
            task_data = json.loads(msg.data.decode())
            task_id = task_data.get("task_id")
            task_type = task_data.get("task_type")
            payload = task_data.get("payload")
            
            print(f"Received task {task_id} of type {task_type}")
            
            # Process task based on type
            if task_type == "market_analysis":
                result = await self.analyze_market(payload)
            elif task_type == "arbitrage_detection":
                result = await self.detect_arbitrage(payload)
            elif task_type == "risk_assessment":
                result = await self.assess_risk(payload)
            else:
                result = {"error": f"Unknown task type: {task_type}"}
            
            # Send result back via NATS
            result_subject = f"analysis.out.{payload.get('mission_id', 'unknown')}"
            result_payload = {
                "task_id": task_id,
                "agent_id": self.agent_id,
                "result": result,
                "timestamp": "2024-01-01T00:00:00Z"  # In production, use actual timestamp
            }
            
            await self.nc.publish(result_subject, json.dumps(result_payload).encode())
            print(f"Sent result for task {task_id} to {result_subject}")
            
        except Exception as e:
            print(f"Error handling task: {e}")
            # Send error response
            error_payload = {
                "task_id": task_data.get("task_id", "unknown"),
                "agent_id": self.agent_id,
                "error": str(e),
                "timestamp": "2024-01-01T00:00:00Z"
            }
            await self.nc.publish("analysis.error", json.dumps(error_payload).encode())
    
    async def handle_control(self, msg):
        """Handle control messages (start, stop, etc.)"""
        try:
            control_data = json.loads(msg.data.decode())
            action = control_data.get("action")
            
            if action == "stop":
                print("Received stop signal")
                await self.shutdown()
            elif action == "status":
                await self.send_status()
            
        except Exception as e:
            print(f"Error handling control message: {e}")
    
    async def analyze_market(self, payload: Dict[str, Any]) -> Dict[str, Any]:
        """Perform market analysis using ADK agent"""
        token_pair = payload.get("token_pair", "SOL/USDC")
        
        # Use ADK agent to analyze market
        analysis_prompt = f"""
        Analyze the current market conditions for {token_pair}.
        
        1. Get the order book data
        2. Calculate market depth and liquidity
        3. Identify potential trading opportunities
        4. Assess risk levels
        
        Provide a structured analysis with specific recommendations.
        """
        
        try:
            # In a real implementation, this would call the ADK agent
            # For now, simulate the analysis
            analysis_result = {
                "pair": token_pair,
                "market_depth": 0.85,
                "liquidity_score": 0.78,
                "volatility": 0.023,
                "trend": "bullish",
                "confidence": 0.82,
                "recommendations": [
                    {
                        "action": "buy",
                        "size": 1000,
                        "target_price": 100.5,
                        "stop_loss": 98.0,
                        "reason": "Strong support at 98.5, bullish momentum"
                    }
                ]
            }
            
            return analysis_result
            
        except Exception as e:
            return {"error": f"Analysis failed: {e}"}
    
    async def detect_arbitrage(self, payload: Dict[str, Any]) -> Dict[str, Any]:
        """Detect arbitrage opportunities across venues"""
        venues = payload.get("venues", ["jupiter", "orca", "raydium"])
        token_pair = payload.get("token_pair", "SOL/USDC")
        
        # Simulate arbitrage detection
        opportunities = [
            {
                "buy_venue": "orca",
                "sell_venue": "jupiter",
                "spread": 0.0025,
                "profit_estimate": 0.002,
                "size": 5000,
                "confidence": 0.91
            }
        ]
        
        return {
            "pair": token_pair,
            "venues_analyzed": venues,
            "opportunities": opportunities,
            "total_profit_potential": sum(op["profit_estimate"] for op in opportunities)
        }
    
    async def assess_risk(self, payload: Dict[str, Any]) -> Dict[str, Any]:
        """Assess risk for proposed trades"""
        positions = payload.get("positions", [])
        
        # Use ADK agent for risk calculation
        risk_prompt = f"""
        Calculate comprehensive risk metrics for the following positions:
        {json.dumps(positions, indent=2)}
        
        Provide:
        1. Value at Risk (VaR) at 95% confidence
        2. Maximum drawdown estimate
        3. Correlation risks
        4. Recommended position sizes
        """
        
        # Simulate risk assessment
        risk_assessment = {
            "portfolio_var_95": 0.12,
            "max_drawdown_estimate": 0.08,
            "correlation_risk": "medium",
            "recommended_adjustments": [
                {
                    "position": "SOL/USDC",
                    "current_size": 10000,
                    "recommended_size": 8000,
                    "reason": "High correlation with existing BTC position"
                }
            ]
        }
        
        return risk_assessment
    
    async def send_heartbeat(self):
        """Send periodic heartbeat to orchestrator"""
        while True:
            try:
                heartbeat = {
                    "agent_id": self.agent_id,
                    "status": "running",
                    "timestamp": "2024-01-01T00:00:00Z",
                    "metrics": {
                        "tasks_completed": 42,
                        "average_response_time": 0.85,
                        "memory_usage_mb": 512,
                        "cpu_usage_percent": 25.0
                    }
                }
                
                await self.nc.publish(f"agent.heartbeat.{self.agent_id}", 
                                    json.dumps(heartbeat).encode())
                
                await asyncio.sleep(5)  # Heartbeat every 5 seconds
                
            except Exception as e:
                print(f"Error sending heartbeat: {e}")
                await asyncio.sleep(5)
    
    async def send_status(self):
        """Send detailed status report"""
        status = {
            "agent_id": self.agent_id,
            "status": "running",
            "uptime": "01:23:45",
            "tasks_processed": 42,
            "success_rate": 0.95,
            "memory_usage": {
                "total_mb": 512,
                "used_mb": 387,
                "cached_mb": 125
            },
            "model_info": {
                "model": os.getenv("ADK_MODEL", "gemini-2b-flash"),
                "tools_loaded": 3,
                "inference_count": 42
            }
        }
        
        await self.nc.publish(f"agent.status.{self.agent_id}", 
                             json.dumps(status).encode())
    
    async def shutdown(self):
        """Gracefully shutdown the agent"""
        print("Shutting down agent...")
        if self.nc:
            await self.nc.close()
        exit(0)

async def main():
    """Main entry point"""
    agent = ProwziAnalysisAgent()
    await agent.start()

if __name__ == "__main__":
    asyncio.run(main())